@@ -1946,5 +1946,35 @@ The color must be allocated;
         <remarks>Area includes window manager titlebar/borders if any. The frame position is given in root window coordinates. To get the position of the window itself (rather than the frame) in root window coordinates, use <see cref="M:Gdk.Window.GetOrigin" />.</remarks>
       </Docs>
     </Member>
+    <Member MemberName="AddFilterForAll">
+      <MemberSignature Language="C#" Value="public static void AddFilterForAll (Gdk.FilterFunc func);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="func" Type="Gdk.FilterFunc" />
+      </Parameters>
+      <Docs>
+        <summary>Adds an event filtering function for all Windows.</summary>
+        <param name="func">a <see cref="T:Gdk.FilterFunc" /></param>
+        <remarks>It is possible to do significant damage to Gdk's built in event processing using this capability if used improperly.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="RemoveFilterForAll">
+      <MemberSignature Language="C#" Value="public static void RemoveFilterForAll (Gdk.FilterFunc func);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="func" Type="Gdk.FilterFunc" />
+      </Parameters>
+      <Docs>
+        <summary>Removes an event filtering function for all Windows.</summary>
+        <param name="func">a <see cref="T:Gdk.FilterFunc" /></param>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
