@@ -1,5 +1,11 @@
 2005-01-11  Mike Kestner  <mkestner@novell.com>
 
+	* gdk/Window.custom : add AddFilterForAll and RemoveFilterForAll
+	methods to handle the window==null native case.
+	[Fixes #71065]
+
+2005-01-11  Mike Kestner  <mkestner@novell.com>
+
 	* glib/Argv.cs : add automatic progname handling.
 	* gdk/Global.custom : kill obsolete warnings by using GLib.Argv.
 
